--- a/Assests/CSS/main.css
+++ b/Assests/CSS/main.css
@@ -1,6 +1,103 @@
-/* Import Third Party CSS Files First */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@300&display=swap');
+::-webkit-scrollbar { width: 0.25rem; }
+::-webkit-scrollbar-track { border-radius: 10rem; background-color: var(--background); }
+::-webkit-scrollbar-thumb { border-radius: 10rem; background-color: #fff; }
+body {
+  background: #111;
+  font-family: Calibri, "Trebuchet MS", sans-serif;
+}
+* {
+  margin: 0;
+  color: white;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+nav{
+  height: 60px;
+  align-items: center;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin: 0;
+}
+nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 50%;
+  top: 30px;
+  transform: translate(-50%, -50%);
+}
+nav ul li {
+  margin: 0 15px;
+}
+nav img{
+  height: 30px;
+}
+nav img:hover{
+  height: 30px;
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+nav ul li i{
+  margin-right: 5px;
+}
 
-/* Imports CSS Files */
-@import url('style.css');
-@import url('theme.css');
+@keyframes rainbow {
+  0% { color: #ff0000; }
+  10% { color: #fc4444; }
+  20% { color: #fc6404; }
+  30% { color: #fcd444; }
+  40% { color: #8cc43c; }
+  50% { color: #029658; }
+  60% { color: #1abc9c; }
+  70% { color: #5bc0de; }
+  80% { color: #2f64c1; }
+  90% { color: #6454ac; }
+  100% { color: #f978aa; }
+}
+@keyframes shake {
+  /* I DIDNT STEAL THIS FROM 3kh0 LMAO ITS FROM W3Schools LOL */
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+@media (max-width: 450px) {
+}
+hr {
+  border: 1px solid #777;
+}
+.ti {
+  margin-top: 15px;
+  text-align: center;
+}
+@keyframes upcenta {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+  100% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+}
+@keyframes downcenta {
+  0% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
